# fluoddity-observer

./: .dockerignore  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  catalog.json  deny.toml  fly.toml
.sqlx/: query-02d7022a0868e1d1a31290ba8711aba4660860185134030961ea8ef63afe9801.json  query-046d19eea62e04815917ac9e4eaaac2a07fbd3f6bc9c758eba4136cca3ddbae0.json  query-0564c25b2a0f35af1cab34385dc8e4fd71212d60e5b7605b3f5d89d4e2efb8bb.json  query-056f52893e5822807d14bd8ffda0ea8b0aef02c0f89c4676558dba5416b02480.json  query-05d016ecd141f3780bc22e1528cce2b4382105a6cb96a338acf44999da76e3e5.json  query-07746d4e2c97c9661280c4f4049a1a1886e75a3103e3027ecd3591b619769b6b.json  query-087167bdbfccee17bc47188285dc451cf5af76dc702d257d14dc87574921d142.json  query-0a959ea3aaada84f9c46899e3dce23da8cc9faf3384e58802f48301c375c44d7.json  query-0bcc7b11dc6f509a847a900f73d85be2f13777b069d820a1d62f89a98887003c.json  query-0dd8a3423e67ba665196e5dbba1833edbff62e8353dfec411a2fc177dcb8b103.json  query-0ea97f1623f447dc9d76e93786309f743a17075afda3dad2ceff43bb88a58dab.json  query-17eb6a9797778842373f72a4c2e15ae96d15cbd5918bc7ed8c0f48346cca9dfc.json  query-1b119c39899170c5e8663ab2fd1da2abf5730e294563701bc8ecea4decccc294.json  query-1c01eeba6bac59e96c1b4136b7afb22be2d2de739aace8529def4413b46af719.json  query-1cc4ca62f62ab7741934aa8ce68cf318aef336b1dab66e80d47dba69a27273d8.json  query-1d17e730ae8a93d23a08c0578c7f52e96dc071de03a3b29e119d3119cf77f37e.json  query-1dafca9c84ff1965637e01d8c9687389447493469c252667c10a0230d4d3b262.json  query-1ed421588efbfee682d5686e9075986a22f3e6df5854231d0d1ddeee3c3e6f1e.json  query-2209b618bddbf6be050a2ed44e8e8e2d62746215f3b762d813696201ff77778d.json  query-27091a224cf0fd498651289270ac24164ab1eac4a5c15cc9ac42820849811acd.json  query-2800c3f6e65de2c7afbc8c56ba4145169f8ba15f099eb7f579561e1ba05da6c0.json  query-2a5c7b374d9df9ea0dd91bbf17391a907ded0c704d35f88514322d9d8f34fd2d.json  query-2db3675443f5d740b6c9ce2747eaddf0a4c36dcb7418b3d8e9b4558ac3fcc2f9.json  query-2e2807673cc31936839f0de4dd7ca5ec64ce89c5e8a2d31a0ee48276b87636bb.json  query-319265d50518a8440017192f8fae6cbed544c5cc9d5d7ee7deba5642a5a7735f.json  query-343f5c2d174c2bf61704d1ea54318caa44905d7900c011240b19a31c5b7089d3.json  query-398bd34441517433444574acc488659708b68bda3a91c4196a68b82f0b9b7ca5.json  query-432e193bea737387b03ddb8e7d69c4a1336250110d0ea0329960da383bf9b039.json  query-48574bba0157e2ef4a3fa08d34d140cfe31a0256f362d5679c14aa3f14fee48f.json  query-491e65101a9585d44d191323d88388236064b92a3589663dff1b69ba8a0f1ec4.json  query-505dd268dfa5c4f7ec6ef6ac73aee081bf66710c7dabf36dd9f686230bb3a9eb.json  query-5072799550aacd36b2fea7111da8fab6e0fab970f2583da1a935e9c83a8dab6e.json  query-5144413db28a301b405231bf5f98d90b5fea2a0434baa914b259e61651cc43a7.json  query-514a2e52e77acacfe3ecd727fb06a665878a7f6cfc86c3d6de86829f0a41055c.json  query-51e83a18a3a1fe6eb24b82843cefe47421b3326f43b8f821cb8f6cbbcdd4491d.json  query-52010d8115a0da2f7576b6a19cb80e7be48a1aa20dce012303fd1a5e6dbac9d4.json  query-529b1cb74babd6e20cb5e3d31cb2c2a5e0d489213f612e66e8a53448b5101ec0.json  query-554fcaadb8d9263c362aeca9fa1402562785ec5f5b93382d8ec4528c833b5087.json  (+85 more)
docs/: architecture.md
src/: admin.rs  db.rs  (+15 more)
(+27 files in other folders)
