[package]
name = "paperclips-gallery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
atrium-api = "0.25"
atrium-common = "0.1"
atrium-identity = "0.1"
atrium-oauth = { version = "0.1", default-features = false }
atrium-xrpc = "0.12"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
maud = { version = "0.27", features = ["axum"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
